--- a/DopodCinema/Module/Movie/MovieDetail/MovieDetailViewController.xib
+++ b/DopodCinema/Module/Movie/MovieDetail/MovieDetailViewController.xib
@@ -27,6 +27,8 @@
                 <outlet property="thePlotLabel" destination="pBo-YH-pM4" id="xBF-FU-46Y"/>
                 <outlet property="timeLabel" destination="tIB-2N-vhc" id="oIT-zn-E6Q"/>
                 <outlet property="topConstraint" destination="o6R-K7-Ts4" id="rDN-tT-LAL"/>
+                <outlet property="trailerCollectionView" destination="aXE-hi-cEp" id="QiY-3x-2VQ"/>
+                <outlet property="trailerLabel" destination="ItZ-ma-KCB" id="lA0-PE-GEd"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -42,7 +44,7 @@
                             <rect key="frame" x="0.0" y="0.0" width="414" height="1500"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PWi-br-6Qf">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="1136.6666666666667"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="1318"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rA3-1N-T16">
                                             <rect key="frame" x="44" y="16" width="326" height="434.66666666666669"/>
@@ -152,8 +154,41 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ydM-Hj-454">
+                                            <rect key="frame" x="0.0" y="604" width="414" height="195.33333333333337"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Movie Trailers" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ItZ-ma-KCB">
+                                                    <rect key="frame" x="15.999999999999993" y="24" width="105.33333333333331" height="20.333333333333329"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="aXE-hi-cEp">
+                                                    <rect key="frame" x="0.0" y="54.333333333333371" width="414" height="117"/>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="117" id="AQO-O1-ILx"/>
+                                                    </constraints>
+                                                    <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="lHr-kN-cyZ">
+                                                        <size key="itemSize" width="0.0" height="0.0"/>
+                                                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                                    </collectionViewFlowLayout>
+                                                </collectionView>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="aXE-hi-cEp" secondAttribute="trailing" id="7vN-4a-ZXa"/>
+                                                <constraint firstItem="ItZ-ma-KCB" firstAttribute="leading" secondItem="ydM-Hj-454" secondAttribute="leading" constant="16" id="E0A-9q-KRC"/>
+                                                <constraint firstAttribute="bottom" secondItem="aXE-hi-cEp" secondAttribute="bottom" constant="24" id="JAn-gd-o7Q"/>
+                                                <constraint firstItem="aXE-hi-cEp" firstAttribute="leading" secondItem="ydM-Hj-454" secondAttribute="leading" id="hYV-CJ-xk1"/>
+                                                <constraint firstItem="ItZ-ma-KCB" firstAttribute="top" secondItem="ydM-Hj-454" secondAttribute="top" constant="24" id="m2f-8R-48d"/>
+                                                <constraint firstItem="aXE-hi-cEp" firstAttribute="top" secondItem="ItZ-ma-KCB" secondAttribute="bottom" constant="10" id="m6e-jV-Qj7"/>
+                                            </constraints>
+                                        </view>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ITK-Db-c1w">
-                                            <rect key="frame" x="0.0" y="628" width="414" height="204.33333333333337"/>
+                                            <rect key="frame" x="0.0" y="799.33333333333337" width="414" height="204.33333333333337"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Movie Screenshots" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yk5-KQ-zox">
                                                     <rect key="frame" x="16" y="0.0" width="145" height="20.333333333333332"/>
@@ -162,7 +197,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="xKW-aL-fV5">
-                                                    <rect key="frame" x="0.0" y="30.333333333333371" width="414" height="150"/>
+                                                    <rect key="frame" x="0.0" y="30.333333333333258" width="414" height="150"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="150" id="fN6-pc-nn9"/>
@@ -177,16 +212,16 @@
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
+                                                <constraint firstItem="Yk5-KQ-zox" firstAttribute="top" secondItem="ITK-Db-c1w" secondAttribute="top" id="C9Q-dB-ZQ2"/>
                                                 <constraint firstAttribute="bottom" secondItem="xKW-aL-fV5" secondAttribute="bottom" constant="24" id="Cry-mr-H09"/>
                                                 <constraint firstAttribute="trailing" secondItem="xKW-aL-fV5" secondAttribute="trailing" id="O1t-FP-r7J"/>
                                                 <constraint firstItem="xKW-aL-fV5" firstAttribute="leading" secondItem="ITK-Db-c1w" secondAttribute="leading" id="UXF-Hf-TzB"/>
                                                 <constraint firstItem="Yk5-KQ-zox" firstAttribute="leading" secondItem="ITK-Db-c1w" secondAttribute="leading" constant="16" id="eWk-5n-OEn"/>
                                                 <constraint firstItem="xKW-aL-fV5" firstAttribute="top" secondItem="Yk5-KQ-zox" secondAttribute="bottom" constant="10" id="hvJ-os-zYo"/>
-                                                <constraint firstItem="Yk5-KQ-zox" firstAttribute="top" secondItem="ITK-Db-c1w" secondAttribute="top" id="zXj-VS-oxb"/>
                                             </constraints>
                                         </view>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sSW-ha-eld">
-                                            <rect key="frame" x="0.0" y="832.33333333333337" width="414" height="204.33333333333337"/>
+                                            <rect key="frame" x="0.0" y="1013.6666666666666" width="414" height="204.33333333333337"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Similar Movies" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zxI-2y-2bF">
                                                     <rect key="frame" x="16.000000000000007" y="0.0" width="109.66666666666669" height="20.333333333333332"/>
@@ -195,7 +230,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="fxY-nZ-PlN">
-                                                    <rect key="frame" x="0.0" y="30.333333333333258" width="414" height="150"/>
+                                                    <rect key="frame" x="0.0" y="30.333333333333371" width="414" height="150"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="150" id="SV5-tG-J4y"/>
@@ -228,21 +263,24 @@
                                         <constraint firstItem="jY4-NF-a9P" firstAttribute="top" secondItem="I4a-dV-Aus" secondAttribute="bottom" constant="8" id="4h6-sQ-ZOv"/>
                                         <constraint firstAttribute="trailing" secondItem="I4a-dV-Aus" secondAttribute="trailing" constant="16" id="AcO-Ye-BUL"/>
                                         <constraint firstAttribute="trailing" secondItem="ITK-Db-c1w" secondAttribute="trailing" id="BMX-1a-duc"/>
+                                        <constraint firstItem="sSW-ha-eld" firstAttribute="top" secondItem="ITK-Db-c1w" secondAttribute="bottom" constant="10" id="C1g-Fb-VMZ"/>
                                         <constraint firstItem="JLi-cB-g7r" firstAttribute="centerX" secondItem="rA3-1N-T16" secondAttribute="centerX" id="CWJ-kF-W91"/>
                                         <constraint firstItem="6bg-se-emK" firstAttribute="centerX" secondItem="PWi-br-6Qf" secondAttribute="centerX" id="HPF-gP-2mk"/>
                                         <constraint firstAttribute="trailing" secondItem="pBo-YH-pM4" secondAttribute="trailing" constant="16" id="Lif-kh-fKO"/>
                                         <constraint firstItem="rA3-1N-T16" firstAttribute="leading" secondItem="PWi-br-6Qf" secondAttribute="leading" constant="44" id="OsT-Gp-CXA"/>
                                         <constraint firstAttribute="bottom" secondItem="sSW-ha-eld" secondAttribute="bottom" constant="100" id="QNE-yO-Dgj"/>
+                                        <constraint firstItem="ITK-Db-c1w" firstAttribute="top" secondItem="ydM-Hj-454" secondAttribute="bottom" id="QnR-Mq-NM0"/>
+                                        <constraint firstItem="ydM-Hj-454" firstAttribute="leading" secondItem="PWi-br-6Qf" secondAttribute="leading" id="RLB-bK-1l6"/>
+                                        <constraint firstItem="ydM-Hj-454" firstAttribute="top" secondItem="iaA-gO-C2C" secondAttribute="bottom" id="Rch-3S-h0a"/>
                                         <constraint firstItem="JLi-cB-g7r" firstAttribute="bottom" secondItem="rA3-1N-T16" secondAttribute="bottom" constant="-18" id="StG-dO-tbv"/>
                                         <constraint firstAttribute="trailing" secondItem="sSW-ha-eld" secondAttribute="trailing" id="Vk3-lk-Xr9"/>
                                         <constraint firstItem="rA3-1N-T16" firstAttribute="top" secondItem="PWi-br-6Qf" secondAttribute="top" constant="16" id="c0Q-jY-bDP"/>
-                                        <constraint firstItem="sSW-ha-eld" firstAttribute="top" secondItem="ITK-Db-c1w" secondAttribute="bottom" id="dW3-ww-x4g"/>
                                         <constraint firstItem="6bg-se-emK" firstAttribute="top" secondItem="jY4-NF-a9P" secondAttribute="bottom" constant="8" id="f07-DX-u0r"/>
                                         <constraint firstItem="jY4-NF-a9P" firstAttribute="trailing" secondItem="I4a-dV-Aus" secondAttribute="trailing" id="hOU-7J-rSg"/>
+                                        <constraint firstAttribute="trailing" secondItem="ydM-Hj-454" secondAttribute="trailing" id="iU8-hM-GQe"/>
                                         <constraint firstItem="ITK-Db-c1w" firstAttribute="leading" secondItem="PWi-br-6Qf" secondAttribute="leading" id="j8y-Hu-eMd"/>
                                         <constraint firstItem="iaA-gO-C2C" firstAttribute="leading" secondItem="pBo-YH-pM4" secondAttribute="leading" id="kPM-ql-nXp"/>
                                         <constraint firstItem="jY4-NF-a9P" firstAttribute="leading" secondItem="I4a-dV-Aus" secondAttribute="leading" id="m0f-NS-DeP"/>
-                                        <constraint firstItem="ITK-Db-c1w" firstAttribute="top" secondItem="iaA-gO-C2C" secondAttribute="bottom" constant="24" id="mVN-Bu-ZKy"/>
                                         <constraint firstItem="sSW-ha-eld" firstAttribute="leading" secondItem="PWi-br-6Qf" secondAttribute="leading" id="nIL-Tc-NRK"/>
                                         <constraint firstItem="I4a-dV-Aus" firstAttribute="leading" secondItem="PWi-br-6Qf" secondAttribute="leading" constant="16" id="tXl-JJ-tAE"/>
                                         <constraint firstItem="I4a-dV-Aus" firstAttribute="top" secondItem="rA3-1N-T16" secondAttribute="bottom" constant="16" id="wnd-kJ-6jh"/>
