[feature]: handle save and hide showtime

--- a/DopodCinema/Common/View/BaseHeaderSubView.xib
+++ b/DopodCinema/Common/View/BaseHeaderSubView.xib
@@ -38,14 +38,17 @@
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a1Z-BN-Con">
-                                    <rect key="frame" x="365" y="13" width="30" height="30"/>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a1Z-BN-Con">
+                                    <rect key="frame" x="355" y="8" width="40" height="40"/>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="30" id="PKV-cF-awE"/>
-                                        <constraint firstAttribute="width" constant="30" id="c1H-Ww-Naa"/>
+                                        <constraint firstAttribute="width" constant="40" id="c1H-Ww-Naa"/>
+                                        <constraint firstAttribute="width" secondItem="a1Z-BN-Con" secondAttribute="height" multiplier="1:1" id="pdb-dr-JLy"/>
                                     </constraints>
                                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                    <state key="normal" image="ic_setting"/>
+                                    <state key="normal" image="ic_save_inactive"/>
+                                    <connections>
+                                        <action selector="didSave" destination="iN0-l3-epB" eventType="touchUpInside" id="VVg-5v-cQr"/>
+                                    </connections>
                                 </button>
                             </subviews>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -80,7 +83,7 @@
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
-                <outlet property="settingButton" destination="a1Z-BN-Con" id="LxU-Wv-4yP"/>
+                <outlet property="saveButton" destination="a1Z-BN-Con" id="O3l-Cc-JbA"/>
                 <outlet property="titleLabel" destination="gjg-1R-3m9" id="MRf-dz-1Wn"/>
             </connections>
             <point key="canvasLocation" x="137.68115942028987" y="-198.50543478260872"/>
@@ -88,6 +91,6 @@
     </objects>
     <resources>
         <image name="ic_back" width="40" height="40"/>
-        <image name="ic_setting" width="23" height="22"/>
+        <image name="ic_save_inactive" width="40" height="40"/>
     </resources>
 </document>
