[feature]: add category detail

--- a/DopodCinema/Common/View/HeaderCell.xib
+++ b/DopodCinema/Common/View/HeaderCell.xib
@@ -27,13 +27,16 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xrZ-J5-HEz">
-                        <rect key="frame" x="244" y="23.5" width="60" height="28"/>
+                        <rect key="frame" x="244" y="23.666666666666671" width="60" height="28"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="60" id="rYp-U1-MJb"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                         <state key="normal" title="See all"/>
+                        <connections>
+                            <action selector="didToSeeAll" destination="KGk-i7-Jjw" eventType="touchUpInside" id="ucs-ZG-vCa"/>
+                        </connections>
                     </button>
                 </subviews>
                 <constraints>
